22 Dec 2009: 1.0.3 Miek <rdup@miek.nl>
  * rdup-up: added -r PATH option (suggested by Dave Martin)
  * rdup-simple: fix gpg encryption (Clayton Holloway)
  * rdup-simple: fix mcrypt encryption (Clayton Holloway)


09 Aug 2009: 1.0.2 Miek <rdup@miek.nl>
  * rdup: libnettle is mandatory
  * rdup: use sha1 from libnettle 
  * rdup-simple: fix location/PATH of rdup-ln and rdup-simple
    They install to /usr/bin now (Tom Hendrikx)


31 May 2009: 1.0.0 Miek <miek@miek.nl>
  - 1.0.0 release! -
  * tests: more DejaGNU tests added
  * rdup: default to '.' when no directories/files are provided
  * rdup: make {c|m}-time comparison >= instead of >
  * rdup: when a directory only does a mode change, make sure it
    does not get listed on the deleted list
  * rdup-tr: exit when -X/-Y used and we are compiled without encryption
  * rdup-tr: check for encrypted path components larger than 255 chars
  * rdup-up: added -vv write uid/gid and filename to stdout, makes non
    root remote backups possible, see: http://www.miek.nl/s/8374af9844
  * rdup-up: better handle non-writable directories when restoring
  * rdup-up: implemented the -s (strip path) option
  * rdup-up (fs-up.c): code cleanups and some permission settings
  * rdup-up: when recursively deleting a directory, delete the directory
    itself too when the recursion ends
  * rdup-up: avoid // when restoring to /
  * rdup-simple: add -s (strip) here too


03 May 2009: 0.9.9 Miek <miek@miek.nl>
  - bugfix release -
  * rdup-simple: use blowfish for ssh
  * rdup-up: set the owner and group for everything you create
  * tests: added dejagnu based tests; 'make check' performs the
    testing. You'll need dejagnu for it to work.


16 Apr 2009: 0.9.1 Miek <miek@miek.nl>
  - bugfixes only -
  * rdup*: code cleanups
  * rdup -c: fix the block based output (Reported by Jared Henley)
  * documentation tweaks


01 Mar 2009: 0.9.0 Miek <miek@miek.nl>
  - major (lowlevel) feature enhancements - 