@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.57)
-AC_INIT(rdup, 1.0.3, miek@miek.nl, rdup)
+AC_INIT(rdup, 1.0.4, miek@miek.nl, rdup)
 AC_CONFIG_SRCDIR([rdup.c])
 AC_PREFIX_DEFAULT(/usr)
 
@@ -88,13 +88,13 @@ fi
 NETTLE_H=""
 AC_CHECK_HEADERS(nettle/aes.h,, NETTLE_H="no")
 if test "$NETTLE_H" = "no"; then
-	AC_MSG_ERROR([** No nettle library found.])
+	AC_MSG_WARN([** No nettle library found.])
 fi
 
 NETTLE_L=""
 AC_CHECK_LIB(nettle, nettle_aes_encrypt, ,NETTLE_L="no")
 if test "$NETTLE_L" = "no"; then
-    AC_MSG_ERROR([** No nettle library found.])
+    AC_MSG_WARN([** No nettle library found.])
 fi
 AC_SUBST(NETTLE_L)
 
