@@ -1,3 +1,8 @@
+xx Jan 2010: 1.0.4 Miek <rdup@miek.nl>
+  * fix compile on amd64 (Tom Hendrix)
+  * fix compile *without* libnettle (Miek Gieben)
+
+
 22 Dec 2009: 1.0.3 Miek <rdup@miek.nl>
   * rdup-up: added -r PATH option (suggested by Dave Martin)
   * rdup-simple: fix gpg encryption (Clayton Holloway)
